...
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0jO-6k-Rgw">
                                <rect key="frame" x="212" y="308" width="120" height="40"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Delete">
                                            <attributes>
                                                <color key="NSColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <font key="NSFont" size="24" name="MarkerFelt-Thin"/>
                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                            </attributes>
                                        </fragment>
...
